--- a/calc3.html
+++ b/calc3.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -39,7 +39,7 @@
     <div id="divServant">
         <table class="servant">
             <tr>
-                <td colspan="4">
+                <td colspan="8">
                     <select id="ddlChooseServant">
                         <option value="-1">|----------------------请选择从者-------------------------|</option>
                     </select>
@@ -47,8 +47,6 @@
                         <input type="checkbox" id="ckIsMaxGrail" />圣杯MAX</label>
                     <input type="text" id="txtWord" class="search" list="dlTips" autofocus />
                     <input type="button" id="btnSearch" value="查询" />&nbsp;
-				</td>
-				<td colspan="4">
                     <a href="javascript:;" id="btnShowMaterials">强化素材</a>&nbsp;
                     <a href="javascript:;" id="btnShowSkills">从者技能</a>&nbsp;
                     <a href="javascript:;" id="btnShowNP">NP获取</a>&nbsp;
@@ -59,13 +57,13 @@
                 </td>
             </tr>
             <tr>
-                <td colspan="4">
+                <td colspan="2">
                     <div class="switchBtn">
                         <label for="rdSave"><input type="radio" id="rdSave" data-divid="divSave" name="switch">存档</label>
                         <label for="rdLoad"><input type="radio" id="rdLoad" data-divid="divLoad" name="switch">读档</label>                     
                     </div>
                 </td>
-                <td colspan="4">
+                <td colspan="6">
                     <div class="switchCotent" id="divSave">
                         存档名：<input type="text" id="txtSaveTitle"> <a href="javascript:;" id="btnSave">保存</a>
                     </div>
