--- a/calc3.html
+++ b/calc3.html
@@ -862,7 +862,7 @@
 
             let cardColor = careerSkill.cardColor;
             /************************************卡牌Buff******************************************************/
-            //0.8(Quick)，1(Arts)，1.5(Buster)，0(All)，-1(None)，-2(Quick和Arts)，-3(Buster和Quick)
+            //0.8(Quick)，1(Arts)，1.5(Buster)，0(All)，-1(None)，-2(Quick和Arts)，-3(Buster和Quick), -4(Buster和Arts)
             if ((cardColor == 0.8 || cardColor == 1 || cardColor == 1.5) && cardColor == cardColorValue) {
                 $("txtCardBuff").dataset.value = careerSkill.cardBuff;
 
@@ -898,6 +898,19 @@
                 $("txtCardBuff").dataset.value = quickBuff;
 
                 $("txtCardBuff").value = quickBuff;
+            }     
+			//Buster和Arts
+            else if (cardColor == -4 && cardColorValue == 1.5 && cardBuffs && cardBuffs.length == 2) {
+                let busterBuff = cardBuffs[0];
+                $("txtCardBuff").dataset.value = busterBuff;
+
+                $("txtCardBuff").value = busterBuff;
+            }
+            else if (cardColor == -4 && cardColorValue == 1 && cardBuffs && cardBuffs.length == 2) {
+                let artsBuff = cardBuffs[1];
+                $("txtCardBuff").dataset.value = artsBuff;
+
+                $("txtCardBuff").value = artsBuff;
             }
             /****************************************固定伤害Buff**************************************************/
             if (!isNaN(careerSkill.fixedDamageBuff)) {
