--- a/index.html
+++ b/index.html
@@ -1,32 +1,140 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <title></title>
+    <link href="css/style.css" rel="stylesheet" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <style type="text/css">
-        h1>a {
-            margin: 8px;
-            padding: 5px;
-            text-decoration: none;
+        nav, .content {
+            margin: 5px;
         }
-        /**字体颜色渐变**/
-        h1>a.text-gradient {
+
+        ul {
+            height: 34px;
+            list-style: none;
+        }
+
+        nav > ul > li {
+            width: 140px;
+            margin-right: 5px;
+            margin-bottom: 5px;
+            border: 1px solid gray;
+            background: gray;
             display: block;
-            word-wrap: normal;
-            font-weight: bold;
-            font-family: helvetica;
+            float: left;
             text-align: center;
-            background: -webkit-linear-gradient(left, #4f185d, #fe5d4b); /* 背景色渐变 */
-            -webkit-background-clip: text; /* 规定背景的划分区域 */
-            -webkit-text-fill-color: transparent; /* 防止字体颜色覆盖 */
+        }
+
+        nav > ul > li > a {
+            padding: 5px;
+            display: block;
+            color: white;
+            width: 130px;
+        }
+
+        .active {
+            background: blue;
+        }
+
+        #to_top{
+          text-align:center;  
+          background:#06c; 
+          display:none;
+          position:fixed;
+          right:10px;
+          bottom:10px;
+        }
+        #to_top>a{
+          text-decoration: none;
+          display: block;
+          outline-style:none;
+          color:#fff;
+          width:30px; 
+          height:40px; 
+          padding:20px; 
+          font:14px/20px arial; 
         }        
     </style>
+    <script src="js/common.js"></script>
+    <script type="text/javascript">
+        "use strict";
+        window.onload = function () {
+            resizeWindow();
+            let links = document.querySelectorAll("#top a");
+            for (let i = 0; i < links.length; i++) {
+                links[i].onclick = function () {
+                    let url = this.dataset.url;
+
+                    //获取选中的a标签
+                    let active = document.querySelector(".active");
+
+                    //移除选中a标签的"active"类名
+                    active.classList.remove("active");
+
+                    //给当前选中的a标签添加"active"类名
+                    this.classList.add("active");
+                    if (url.indexOf("http") == -1) {
+                        $("iContent").src = url;
+                        resizeWindow();
+                    }
+                    else {
+                        resetChoose();
+                        openTab(url);
+                    }
+                }
+            }
+        }
+ 
+        //每次新开标签页打开其它域名的网页前重新设置默认选中项以及iframe的src属性值
+        function resetChoose() {
+            let active = document.querySelector(".active");
+
+            //移除选中a标签的"active"类名
+            active.classList.remove("active");
+
+            //默认选中第1个
+            //由于这几个a标签不是兄弟元素，所以只能通过li元素来找
+            let first = document.querySelector("ul li:nth-child(1)>a");
+            first.classList.add("active");
+            $("iContent").src = first.dataset.url;
+        }
+
+        window.onresize = resizeWindow;
+
+        window.onscroll=function(){
+            let t=document.documentElement.scrollTop||document.body.scrollTop;
+            if(t>100){
+                $("to_top").style.display="block";
+            }
+            else{
+                $("to_top").style.display="none";
+            }
+        }
+    </script>
 </head>
-<body style="text-align:center;">
-    <h1><a href="Q&A.html" target="_blank" class="text-gradient">Q&A说明(2018.01.05)</a></h1>
-    <h1><a href="calc4.html">宝具伤害计算器(2018.07.17)</a></h1>
-	<h1><a href="calcm.html">宝具伤害计算器（竖屏适应测试）(2018.07.17)</a></h1>
-    <h1>因原作者弃坑，目前计算器为个人维护版本(yutio888)，限于时间和精力，部分功能将暂停更新。 </h1>
+<body>
+    <nav id="top">
+        <ul>
+            <li><a href="javascript:;" class="active" data-url="calc3.html">宝具伤害计算器</a></li>
+            <li><a href="javascript:;" data-url="calccard.html">指令卡伤害计算器</a></li>
+            <li><a href="javascript:;" data-url="https://fgo-archive.github.io/index/np_cal.html">外链NP计算器</a></li>
+			<li><a href="javascript:;" data-url="calcm.html">竖屏宝具计算器</a></li>
+			<li><a href="javascript:;" data-url="http://bbs.ngacn.cc/read.php?tid=14304478">BUG反馈</a></li>
+            <!--<li><a href="javascript:;" data-url="guid.html">FGO伤害计算公式</a></li>
+            
+            <li><a href="javascript:;" data-url="updatelog.html">更新日志</a></li>-->
+        </ul>
+    </nav>
+    <div class="content">
+        <iframe id="iContent" src="calc3.html" scrolling="auto" frameborder="0" style="width: 100%;"></iframe>
+    </div>
+    <div id="to_top">
+        <a href="#top">返回顶部</a>
+    </div>
 </body>
 </html>
+
+
+
+
