--- a/calc3.html
+++ b/calc3.html
@@ -80,13 +80,11 @@
 -->
             <tr>
                 <td>阵营</td>
-                <td colspan="3"><span id="spanCamp"></span></td>  
+                <td><span id="spanCamp"></span></td>  
                 <td>属性</td>
-                <td colspan="3"><span id="spanAttributes"></span></td>  
-<!--
+                <td><span id="spanAttributes"></span></td>  
                 <td>特性</td>
                 <td colspan="3"><span id="spanCharacteristics"></span></td> 
--->
             </tr>           
             <tr>
                 <td>等级</td>
