--- a/calc3.html
+++ b/calc3.html
@@ -977,7 +977,7 @@
 		$("txtCardAtk").value = 2000;
 		$("txtTreasurePowerBuff").value = getFloat("txtTreasurePowerBuff") + 15;
 	}
-        function addZZ(){
+        function addKQ(){
                 $("txtCardAtk").value = 2000;
                 $("txtTreasurePowerBuff").value = getFloat("txtTreasurePowerBuff") + 10;
         	let servant = servants[$("ddlChooseServant").value];
@@ -985,11 +985,11 @@
                         $("txtCardBuff").value = getFloat("txtCardBuff") + 10;
                 }
         }
-        function addZZ(){
+        function addHB(){
                 $("txtCardAtk").value = 1671;
                 $("txtTreasurePowerBuff").value = getFloat("txtTreasurePowerBuff") + 60;
         }
-        function addZZ(){
+        function addBS(){
                 $("txtCardAtk").value = 786;
         }
 	function addKM(){
