--- a/calc3.html
+++ b/calc3.html
@@ -771,21 +771,20 @@
             // console.log(servant.lvs[lv-1]);
             lv=servant.lvs[lv-1];
 	    if(lv === undefined || lv.length == 0){
-		$("txtAttack").value=servant.maxAtk;
-//		star=Number(servant.star);
-//		if(star<4){
-//		    mlv=star*5+55;
-//		}
-//		else {
-//		    mlv=star*10+40;
-//		}
-//		if(Number(lv)>=mlv){
-//		    lva=parseInt((Number(servant.maxAtk)-Number(servant.atk))/(100-mlv)*(Number(lv)-mlv)+Number(servant.atk));
-//		    lvh=parseInt((Number(servant.maxHp)-Number(servant.hp))/(100-mlv)*(Number(lv)-mlv)+Number(servant.hp));
-//		    $("txtAttack").value=lva.toString();
-//		    $("txtMaxHp").value=lvh.toString();
-//		    $("txtRemainHp").value=lvh.toString();
-//		}
+		star=Number(servant.star);
+		if(star<4){
+		    mlv=star*5+55;
+		}
+		else {
+		    mlv=star*10+40;
+		}
+		if(Number(lv)>=mlv){
+		    lva=parseInt((Number(servant.maxAtk)-Number(servant.atk))/(100-mlv)*(Number(lv)-mlv)+Number(servant.atk));
+		    lvh=parseInt((Number(servant.maxHp)-Number(servant.hp))/(100-mlv)*(Number(lv)-mlv)+Number(servant.hp));
+		    $("txtAttack").value=lva.toString();
+		    $("txtMaxHp").value=lvh.toString();
+		    $("txtRemainHp").value=lvh.toString();
+		}
 	    }
 	    else {
                 $("txtAttack").value=lv.a;
