--- a/calc3.html
+++ b/calc3.html
@@ -47,15 +47,18 @@
                         <input type="checkbox" id="ckIsMaxGrail" />圣杯MAX</label>
                     <input type="text" id="txtWord" class="search" list="dlTips" autofocus />
                     <input type="button" id="btnSearch" value="查询" />&nbsp;
+<!--
                     <a href="javascript:;" id="btnShowMaterials">强化素材</a>&nbsp;
                     <a href="javascript:;" id="btnShowSkills">从者技能</a>&nbsp;
                     <a href="javascript:;" id="btnShowNP">NP获取</a>&nbsp;
                     <a href="javascript:;" id="btnRedirectKazemai">前往理想鄉</a>&nbsp;
                     <a href="javascript:;" id="btnRedirectWiki">前往wiki</a>&nbsp;
+-->
                     <datalist id="dlTips"></datalist>
                     <datalist id="dlCardTips"></datalist>
                 </td>
             </tr>
+<!--
             <tr>
                 <td colspan="2">
                     <div class="switchBtn">
@@ -73,14 +76,17 @@
                         <a href="javascript:;" id="btnRemove">删除</a>
                     </div>
                 </td>
-            </tr>            
+            </tr>
+-->
             <tr>
                 <td>阵营</td>
-                <td><span id="spanCamp"></span></td>  
+                <td colspan="3"><span id="spanCamp"></span></td>  
                 <td>属性</td>
-                <td><span id="spanAttributes"></span></td>  
+                <td colspan="3"><span id="spanAttributes"></span></td>  
+<!--
                 <td>特性</td>
                 <td colspan="3"><span id="spanCharacteristics"></span></td> 
+-->
             </tr>           
             <tr>
                 <td>等级</td>
@@ -88,105 +94,11 @@
                     <select id="ddlLvs">
                         <option value="-1">默认</option>
                         <option value="100">Lv.100</option>
-                        <option value="99">Lv.99</option>
-                        <option value="98">Lv.98</option>
-                        <option value="97">Lv.97</option>
-                        <option value="96">Lv.96</option>
-                        <option value="95">Lv.95</option>
-                        <option value="94">Lv.94</option>
-                        <option valu+e="93">Lv.93</option>
-                        <option value="92">Lv.92</option>
-                        <option value="91">Lv.91</option>
                         <option value="90">Lv.90</option>
-                        <option value="89">Lv.89</option>
-                        <option value="88">Lv.88</option>
-                        <option value="87">Lv.87</option>
-                        <option value="86">Lv.86</option>
-                        <option value="85">Lv.85</option>
-                        <option value="84">Lv.84</option>
-                        <option value="83">Lv.83</option>
-                        <option value="82">Lv.82</option>
-                        <option value="81">Lv.81</option>
                         <option value="80">Lv.80</option>
-                        <option value="79">Lv.79</option>
-                        <option value="78">Lv.78</option>
-                        <option value="77">Lv.77</option>
-                        <option value="76">Lv.76</option>
-                        <option value="75">Lv.75</option>
-                        <option value="74">Lv.74</option>
-                        <option value="73">Lv.73</option>
-                        <option value="72">Lv.72</option>
-                        <option value="71">Lv.71</option>
                         <option value="70">Lv.70</option>
-                        <option value="69">Lv.69</option>
-                        <option value="68">Lv.68</option>
-                        <option value="67">Lv.67</option>
-                        <option value="66">Lv.66</option>
                         <option value="65">Lv.65</option>
-                        <option value="64">Lv.64</option>
-                        <option value="63">Lv.63</option>
-                        <option value="62">Lv.62</option>
-                        <option value="61">Lv.61</option>
                         <option value="60">Lv.60</option>
-                        <option value="59">Lv.59</option>
-                        <option value="58">Lv.58</option>
-                        <option value="57">Lv.57</option>
-                        <option value="56">Lv.56</option>
-                        <option value="55">Lv.55</option>
-                        <option value="54">Lv.54</option>
-                        <option value="53">Lv.53</option>
-                        <option value="52">Lv.52</option>
-                        <option value="51">Lv.51</option>
-                        <option value="50">Lv.50</option>
-                        <option value="49">Lv.49</option>
-                        <option value="48">Lv.48</option>
-                        <option value="47">Lv.47</option>
-                        <option value="46">Lv.46</option>
-                        <option value="45">Lv.45</option>
-                        <option value="44">Lv.44</option>
-                        <option value="43">Lv.43</option>
-                        <option value="42">Lv.42</option>
-                        <option value="41">Lv.41</option>
-                        <option value="40">Lv.40</option>
-                        <option value="39">Lv.39</option>
-                        <option value="38">Lv.38</option>
-                        <option value="37">Lv.37</option>
-                        <option value="36">Lv.36</option>
-                        <option value="35">Lv.35</option>
-                        <option value="34">Lv.34</option>
-                        <option value="33">Lv.33</option>
-                        <option value="32">Lv.32</option>
-                        <option value="31">Lv.31</option>
-                        <option value="30">Lv.30</option>
-                        <option value="29">Lv.29</option>
-                        <option value="28">Lv.28</option>
-                        <option value="27">Lv.27</option>
-                        <option value="26">Lv.26</option>
-                        <option value="25">Lv.25</option>
-                        <option value="24">Lv.24</option>
-                        <option value="23">Lv.23</option>
-                        <option value="22">Lv.22</option>
-                        <option value="21">Lv.21</option>
-                        <option value="20">Lv.20</option>
-                        <option value="19">Lv.19</option>
-                        <option value="18">Lv.18</option>
-                        <option value="17">Lv.17</option>
-                        <option value="16">Lv.16</option>
-                        <option value="15">Lv.15</option>
-                        <option value="14">Lv.14</option>
-                        <option value="13">Lv.13</option>
-                        <option value="12">Lv.12</option>
-                        <option value="11">Lv.11</option>
-                        <option value="10">Lv.10</option>
-                        <option value="9">Lv.9</option>
-                        <option value="8">Lv.8</option>
-                        <option value="7">Lv.7</option>
-                        <option value="6">Lv.6</option>
-                        <option value="5">Lv.5</option>
-                        <option value="4">Lv.4</option>
-                        <option value="3">Lv.3</option>
-                        <option value="2">Lv.2</option>
-                        <option value="1">Lv.1</option>
                     </select>   
                 </td>
                 <td>攻击力</td>
@@ -408,6 +320,7 @@
     (function(){
         window.Global_save=[];
         let n=1;//默认选择存档
+/*
         let saveStorage=storage.getItem("saveStorage");
         if (saveStorage) {
             saveStorage = JSON.parse(saveStorage);
@@ -423,7 +336,8 @@
         document.querySelector(`.servant .switchCotent:nth-child(${n})`).classList.add("showSwitchContent");
 
         document.querySelector(`.servant .switchBtn>label:nth-child(${n})>input`).checked=true;
-
+*/
+/*
         let switchBtns=document.querySelectorAll(".servant .switchBtn input[type=radio]");
         
         switchBtns.forEach(function(s){
@@ -436,9 +350,10 @@
                 $(this.dataset.divid).classList.add("showSwitchContent");
             }
         })
+*/
     })();
 
-
+/*
     function loadSaveList(){
         updateSaveStorage();
         //清空旧的存档列表信息
@@ -448,6 +363,8 @@
             $("ddlSaveList").options.add(new Option(s.title, s.guid));
         })
     }
+*/
+/*
     function updateSaveStorage(){
         storage.removeItem("saveStorage");
         window.Global_save.sort(compare("guid"));
@@ -462,6 +379,8 @@
         })
         return max+1;
     }
+*/
+/*
     //保存
     $("btnSave").onclick=function(){
         let id = $("ddlChooseServant").value;
@@ -521,7 +440,9 @@
         $("txtSaveTitle").value="";
         alert("存档保存成功!");
     }
+*/
 
+/*
     //加载
     $("btnLoad").onclick=function(){
         let guid=$("ddlSaveList").value;
@@ -687,7 +608,7 @@
             }         
         }
     }
-
+*/
 
 
     //圣杯MAX勾选框改变事件
@@ -769,29 +690,44 @@
 
         if(lv!="-1"){//非默认
             // console.log(servant.lvs[lv-1]);
-            lv=servant.lvs[lv-1];
-	    if(lv === undefined || lv.length == 0){
-		$("txtAttack").value=servant.maxAtk;
-//		star=Number(servant.star);
-//		if(star<4){
-//		    mlv=star*5+55;
-//		}
-//		else {
-//		    mlv=star*10+40;
-//		}
-//		if(Number(lv)>=mlv){
-//		    lva=parseInt((Number(servant.maxAtk)-Number(servant.atk))/(100-mlv)*(Number(lv)-mlv)+Number(servant.atk));
-//		    lvh=parseInt((Number(servant.maxHp)-Number(servant.hp))/(100-mlv)*(Number(lv)-mlv)+Number(servant.hp));
-//		    $("txtAttack").value=lva.toString();
-//		    $("txtMaxHp").value=lvh.toString();
-//		    $("txtRemainHp").value=lvh.toString();
-//		}
+	    let mlv=0;
+	    if(servant.star<4){
+		mlv=servant.star*5+55;
 	    }
 	    else {
+		mlv=servant.star*10+40;
+	    }
+	    if(Number(lv)<=mlv){
+		$("txtAttack").value=servant.atk;
+		$("txtMaxHp").value=servant.hp;
+		$("txtRemainHp").value=servant.hp;
+	    }
+	    else if(Number(lv)>90){
+                $("txtAttack").value=servant.maxAtk;
+                $("txtMaxHp").value=servant.maxHp;
+                $("txtRemainHp").value=servant.maxHp;
+            }
+	    else if(servant.star>1){
+                lv=servant.lvs[0];
                 $("txtAttack").value=lv.a;
                 $("txtMaxHp").value=lv.h;
                 $("txtRemainHp").value=lv.h;
+	        $("ddlLvs").selectedIndex=2;
 	    }
+	    else if(Number(lv)>70){
+                lv=servant.lvs[1];
+                $("txtAttack").value=lv.a;
+                $("txtMaxHp").value=lv.h;
+                $("txtRemainHp").value=lv.h;
+                $("ddlLvs").selectedIndex=2;
+            }
+	    else {
+                lv=servant.lvs[0];
+                $("txtAttack").value=lv.a;
+                $("txtMaxHp").value=lv.h;
+                $("txtRemainHp").value=lv.h;
+                $("ddlLvs").selectedIndex=4;
+            }
             if($("txtAttack").value==servant.maxAtk){
                 $("ckIsMaxGrail").checked=true;
                 $("ckIsMaxGrail").onchange();
@@ -849,7 +785,7 @@
         bindAttributes(servant);
 
         //9.特性
-        bindCharacteristics(servant);
+        //bindCharacteristics(servant);
     }
 
 
