--- a/index.html
+++ b/index.html
@@ -114,22 +114,8 @@
     </script>
 </head>
 <body>
-<!--
-    <nav id="top">
-        <ul>
-            <li><a href="javascript:;" class="active" data-url="calc3.html">宝具伤害计算器</a></li>
-            <li><a href="javascript:;" data-url="calccard.html">指令卡伤害计算器</a></li>
-            <li><a href="javascript:;" data-url="https://fgo-archive.github.io/index/np_cal.html">外链NP计算器</a></li>
-			<li><a href="javascript:;" data-url="calcm.html">竖屏宝具计算器</a></li>
-			<li><a href="javascript:;" data-url="http://bbs.ngacn.cc/read.php?tid=14304478">BUG反馈</a></li>
-            <li><a href="javascript:;" data-url="guid.html">FGO伤害计算公式</a></li>
-            
-            <li><a href="javascript:;" data-url="updatelog.html">更新日志</a></li>
-        </ul>
-    </nav>
--->
     <div class="content">
-        <iframe id="iContent" src="calc3.html" scrolling="auto" frameborder="0" style="width: 100%;"></iframe>
+        <iframe id="iContent" src="calc.html" scrolling="auto" frameborder="0" style="width: 100%;"></iframe>
     </div>
     <div id="to_top">
         <a href="#top">返回顶部</a>
